force-app/main/default/objects/skedHC__Exception__c/skedHC__Exception__c.object-meta.xml
<CustomObject>
    <label>Exception</label>
    <nameField>
        <displayFormat>EX-{0000}</displayFormat>
        <label>Exception Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exception Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>