force-app/main/default/objects/skedHC__Exception__c/fields/sked_Account__c.field-meta.xml
<CustomField>
    <fullName>sked_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Exception Log</relationshipLabel>
    <relationshipName>sked_Exception_Log</relationshipName>
    <type>Lookup</type>
</CustomField>