force-app/main/default/objects/skedHC__Exception__c/fields/sked_Conflicted_Drive__c.field-meta.xml
<CustomField>
    <fullName>sked_Conflicted_Drive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conflicted Drive</label>
    <referenceTo>sked_Drive__c</referenceTo>
    <relationshipLabel>Exception Log (Conflicted Drive)</relationshipLabel>
    <relationshipName>Exception_Log</relationshipName>
    <type>Lookup</type>
</CustomField>