force-app/main/default/objects/skedHC__Exception__c/fields/sked_Conflicted_Job__c.field-meta.xml
<CustomField>
    <fullName>sked_Conflicted_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conflicted Job</label>
    <referenceTo>sked__Job__c</referenceTo>
    <relationshipLabel>Exception Log (Conflicted Job)</relationshipLabel>
    <relationshipName>sked_Exception_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>