force-app/main/default/objects/skedHC__Exception__c/fields/sked_Conflicted_Job_Allocation__c.field-meta.xml
<CustomField>
    <fullName>sked_Conflicted_Job_Allocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conflicted Job Allocation</label>
    <referenceTo>sked__Job_Allocation__c</referenceTo>
    <relationshipLabel>Exception Log (Conflicted Job Allocation)</relationshipLabel>
    <relationshipName>sked_Exception_Log</relationshipName>
    <type>Lookup</type>
</CustomField>