force-app/main/default/objects/skedHC__Exception__c/fields/sked_Conflicted_Resource__c.field-meta.xml
<CustomField>
    <fullName>sked_Conflicted_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conflicted Resource</label>
    <referenceTo>sked__Resource__c</referenceTo>
    <relationshipLabel>Exception Log (Conflicted Resource)</relationshipLabel>
    <relationshipName>sked_Exception_Log</relationshipName>
    <type>Lookup</type>
</CustomField>