force-app/main/default/objects/skedHC__Exception__c/fields/sked_Drive_Shift__c.field-meta.xml
<CustomField>
    <fullName>sked_Drive_Shift__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Drive Shift</label>
    <referenceTo>sked_Drive_Shift__c</referenceTo>
    <relationshipLabel>Exception Log</relationshipLabel>
    <relationshipName>sked_Exception_Log</relationshipName>
    <type>Lookup</type>
</CustomField>