force-app/main/default/objects/skedHC__Exception__c/fields/sked_Exception_Code__c.field-meta.xml
<CustomField>
    <fullName>sked_Exception_Code__c</fullName>
    <description>.</description>
    <label>Exception Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ACTIVITY_OUTSIDE_OF_AP</fullName>
            </value>
            <value>
                <fullName>CDL_DOT_HOURS_VIOLATION</fullName>
            </value>
            <value>
                <fullName>CERT_ADDED_42DAYS</fullName>
            </value>
            <value>
                <fullName>DRIVE_COLLECTION_OPERATION_CHANGED</fullName>
            </value>
            <value>
                <fullName>EQUIPMENT_REDUCED</fullName>
            </value>
            <value>
                <fullName>EXPIRED_REQUIRED_TAG</fullName>
            </value>
            <value>
                <fullName>FITS_MULTIPLE_TIME_BLOCKS</fullName>
            </value>
            <value>
                <fullName>MAXIMUM_TRAVEL_TIME_VIOLATION</fullName>
            </value>
            <value>
                <fullName>MAXIMUM_WEEKLY_HOURS_VIOLATION</fullName>
            </value>
            <value>
                <fullName>MAXIMUM_WEEKLY_WORK_DAYS_VIOLATION</fullName>
            </value>
            <value>
                <fullName>MINIMUM_QUANTITY_NOT_MET</fullName>
            </value>
            <value>
                <fullName>MINIMUM_WEEKLY_WORK_DAYS_VIOLATION</fullName>
            </value>
            <value>
                <fullName>MISSING_REQUIRED_TAG</fullName>
            </value>
            <value>
                <fullName>MISSING_TIME_BLOCK</fullName>
            </value>
            <value>
                <fullName>OUT_OF_OPERATIONAL_HOURS</fullName>
            </value>
            <value>
                <fullName>OUT_OF_TIME_BLOCK</fullName>
            </value>
            <value>
                <fullName>RESOURCE_ACCOUNT_DECLINED</fullName>
            </value>
            <value>
                <fullName>RESOURCE_DATA_CHANGED</fullName>
            </value>
            <value>
                <fullName>RESOURCE_DUPLICATE_SENIORITY_RANKING</fullName>
            </value>
            <value>
                <fullName>RESOURCE_IS_INACTIVE</fullName>
            </value>
            <value>
                <fullName>RESOURCE_NOT_AVAILABLE_FOR_CO</fullName>
            </value>
            <value>
                <fullName>RESOURCE_OUT_OF_CO</fullName>
            </value>
            <value>
                <fullName>RESOURCE_PENDING_TERMINATION</fullName>
            </value>
            <value>
                <fullName>RESOURCE_ROLE_RESTRICTED</fullName>
            </value>
            <value>
                <fullName>RESOURCE_ROLE_STATUS_CHANGED</fullName>
            </value>
            <value>
                <fullName>RESOURCE_SITE_DECLINED</fullName>
            </value>
            <value>
                <fullName>RESOURCE_TIME_CONFLICT</fullName>
            </value>
            <value>
                <fullName>ROLE_TIME_DETAIL_CHANGED</fullName>
            </value>
            <value>
                <fullName>ROLE_TIME_VARIANCE_CHANGED</fullName>
            </value>
            <value>
                <fullName>STAFFING_CONSTRAINT_CHANGED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>