force-app/main/default/objects/skedHC__Exception__c/fields/sked_Linked_Drive__c.field-meta.xml
<CustomField>
    <fullName>sked_Linked_Drive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Drive</label>
    <referenceTo>sked_Linked_Drives__c</referenceTo>
    <relationshipLabel>Exception Log</relationshipLabel>
    <relationshipName>sked_Exception_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>