force-app/main/default/objects/skedHC__Exception__c/fields/sked_Priority__c.field-meta.xml
<CustomField>
    <fullName>sked_Priority__c</fullName>
    <defaultValue>&#39;Medium&#39;</defaultValue>
    <label>Priority</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>