force-app/main/default/objects/skedHC__Exception__c/fields/sked_Resolved_By__c.field-meta.xml
<CustomField>
    <fullName>sked_Resolved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resolved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>sked_Exception_Log</relationshipName>
    <type>Lookup</type>
</CustomField>