force-app/main/default/objects/skedHC__Exception__c/fields/sked_Resolved_Time__c.field-meta.xml
<CustomField>
    <fullName>sked_Resolved_Time__c</fullName>
    <label>Resolved Time</label>
    <type>DateTime</type>
</CustomField>