force-app/main/default/objects/skedHC__Exception__c/fields/sked_Resource_Hours_Record__c.field-meta.xml
<CustomField>
    <fullName>sked_Resource_Hours_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource Hours Record</label>
    <referenceTo>sked_Resource_Hours_Record__c</referenceTo>
    <relationshipLabel>Exception Log</relationshipLabel>
    <relationshipName>sked_Exception_Log</relationshipName>
    <type>Lookup</type>
</CustomField>