force-app/main/default/objects/skedHC__Exception__c/fields/skedHC__Activity__c.field-meta.xml
<CustomField>
    <fullName>skedHC__Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activity</label>
    <referenceTo>sked__Activity__c</referenceTo>
    <relationshipLabel>Exception Log</relationshipLabel>
    <relationshipName>Exception_Log</relationshipName>
    <type>Lookup</type>
</CustomField>