force-app/main/default/objects/skedHC__Exception__c/fields/skedHC__Exception__c.field-meta.xml
<CustomField>
    <fullName>skedHC__Exception__c</fullName>
    <label>Exception</label>
    <length>255</length>
    <type>Text</type>
</CustomField>