force-app/main/default/objects/skedHC__Exception__c/fields/skedHC__Job_Allocation__c.field-meta.xml
<CustomField>
    <fullName>skedHC__Job_Allocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Allocation</label>
    <referenceTo>sked__Job_Allocation__c</referenceTo>
    <relationshipLabel>Exception Log</relationshipLabel>
    <relationshipName>Exception_Log</relationshipName>
    <type>Lookup</type>
</CustomField>