force-app/main/default/objects/skedHC__Exception__c/listViews/Closed_Exceptions.listView-meta.xml
<ListView>
    <fullName>Closed_Exceptions</fullName>
    <columns>NAME</columns>
    <columns>sked_Drive__c</columns>
    <columns>skedHC__Exception__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>skedHC__Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>skedHC__Status__c</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <label>Closed Exceptions</label>
</ListView>