force-app/main/default/objects/skedHC__Exception__c/listViews/skedHC__All.listView-meta.xml
<ListView>
    <fullName>skedHC__All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>sked_Drive__c</columns>
    <columns>skedHC__Job__c</columns>
    <columns>skedHC__Resource__c</columns>
    <columns>skedHC__Exception__c</columns>
    <columns>sked_Priority__c</columns>
    <columns>skedHC__Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>skedHC__Exception__c</field>
        <operation>startsWith</operation>
        <value>Role Time</value>
    </filters>
    <label>All</label>
</ListView>